# Groups

./: Cargo.toml  README.md  Shuttle.toml  build_and_deploy_local.sh  build_and_deploy_shuttle.sh  build_and_deploy_site.sh  build_and_test_site_local.sh  build_local.sh  package_wasm.sh
.shuttle/: config.toml
groups-core/: Cargo.toml
groups-core/src/: lib.rs
groups-core/src/scheduling/: mod.rs  random_strategy.rs
groups-server/: Cargo.toml
groups-server/src/: lib.rs
groups-server/static/css/: style.css
groups-server/static/html/: instructor.html  scheduler.html
groups-server/static/js/: main.js  scheduler_module.js
groups-server/static/pkg/: groups_core.d.ts  groups_core.js  groups_core_bg.wasm  groups_core_bg.wasm.d.ts  package.json
groups_core/: Cargo.toml  build.sh
groups_core/.cargo/: config.toml
groups_core/src/: constants.rs  lib.rs  main.rs  random.rs  student.rs  timezones.rs
groups_core/src/scheduling/: hillclimbing_strategy.rs  min_max_strategy.rs  mod.rs  random_strategy.rs
groups_server/: Cargo.toml  Shuttle.toml  deploy.sh
groups_server/src/: lib.rs  main.rs
groups_server/static/css/: style_instructor.css  style_student.css
groups_server/static/html/: index.html  instructor.html  student.html
groups_server/static/js/: module.js  scheduler_module.js
groups_server/static/pkg/: .groups_core 2.js.icloud  groups_core 2.js  groups_core 3.js  groups_core 4.js  groups_core.d 2.ts  groups_core.d 4.ts  groups_core.d.ts  groups_core.js  groups_core_bg 10.wasm  groups_core_bg 11.wasm  groups_core_bg 12.wasm  groups_core_bg 2.wasm  groups_core_bg 3.wasm  groups_core_bg 4.wasm  groups_core_bg 5.wasm  groups_core_bg 7.wasm  groups_core_bg 9.wasm  groups_core_bg.wasm  groups_core_bg.wasm.d 2.ts  groups_core_bg.wasm.d 3.ts  groups_core_bg.wasm.d.ts  package.json
groups_server_local/: Cargo.toml
groups_server_local/src/: main.rs
