[package]
name = "groups-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
shuttle-service = { version = "0.2", features = ["web-rocket"] }
rocket = { version = "0.5.0-rc.1"}
