[package]
name = "groups_core"
version = "0.1.0"
edition = "2021"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
description = "Core library for encoding / decoding student availability info and choosing groups"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
time-tz = {version = "1.0.1", features = ["db"]}
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
time = "0.3.9"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
itertools = "0.10.3"
rayon = "1.5.2"
bitvec = "1.0.0"
num = "0.4.0"
plotters = "0.3.1"
fake = "2.4.3"
assert_approx_eq = "1.1.0"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
js-sys = { version = "0.3" }
getrandom = { version = "0.2", features = ["js"] }

